--- a/src/app/user-profile/user-profile.component.less
+++ b/src/app/user-profile/user-profile.component.less
@@ -1,10 +1,24 @@
-/*.card-container*/
+.user-profile-container, form {
+  display: flex;
+}
+form {
+  flex-direction: column;
+  width: 40%;
+  margin: 0 auto;
+  justify-content: center;
+}
 mat-card {
   height: 400px;
   width: 300px;
   background-color: #cdcdcd;
   margin-top: 150px;
   border-radius: 20px;
+
+  .edit {
+    position: absolute;
+    top: 40px;
+    right: -5px;
+  }
 
   .avatar-content {
     position: relative;
@@ -51,4 +65,12 @@ mat-card {
   mat-card {
     width: 94%;
   }
+  .user-profile-container {
+    display: block;
+    form {
+      margin: 20px;
+      width: 94%;
+    }
+  }
+  
 }
